public/styles/style.css
@font-face {
    font-family: Wrong;
    src: url(../assets/wrongtime.ttf);
    font-weight: normal;
}

@font-face {
    font-family: Modeco;
    src: url(../assets/Modeco-Regular.ttf);
    font-weight: normal;
}

/*@font-face {*/
/*    font-family: Mulish;*/
/*    src: url(../assets/Mulish-Regular.ttf);*/
/*    font-weight: normal;*/
/*}*/

a {
    text-decoration: none !important;
}

body {
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: black; /* #131313 */
    color: whitesmoke;
    font-family: Modeco, sans-serif !important;
    background-image: url(../images/grafiti-wall.png);
    /*color: #222222;*/

    /*background-size: 100%;*/
    /*background-position-y: 0;*/
    /*background-repeat: no-repeat;*/
    /*background-attachment: fixed;*/
    /*background-position: bottom;*/

    /*background-image: url(../images/SiteBackground.jpg);*/
    /*background-repeat: no-repeat;*/
    /*background-position: center;*/
    /*background-attachment: fixed;*/
    /*-moz-background-size: cover;*/
    /*-o-background-size: cover;*/
    /*background-size: cover;*/
    /*width: 100%;*/
}

.dongle {
    font-family: Dongle, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/*.navbar-toggler.collapsed {*/
/*    visibility: hidden;*/
/*}*/

.textBlock {
    color: whitesmoke;
    font-size: 1rem;
    border: 1px dashed crimson;
}

.bigLogo {
    width: 50%;
}

@media (min-width: 900px) {
    .bigLogo {
        width: 20%;
    }

    .textBlock {
        font-size: 1.2rem;
    }
}

.imageLogo {
    display: block;
    z-index: 1;
    top: 0;
    left: 0;
    position: absolute;
    height: 56px;
}

.command,
a {
    color: white;
    cursor: pointer;
}

.command:hover,
a:hover {
    color: yellow;
}

.navbar-light .navbar-brand {
    margin-top: -4px;
    font-family: Modeco, sans-serif !important;
}

.navbar-text {
    padding: 0.5rem 1rem !important;
}

.navbar-light .navbar-text {
    color: whitesmoke;
}

.navbar-light .navbar-nav .nav-link {
    color: yellow;
}

.centered {
    text-align: center;
}

.alignRight {
    text-align: right;
}

.strength div div {
    height: 4px !important;
}

.bg-light {
    /*background-color: #EAF8FB !important;*/
    /*border-bottom: 1px dotted aquamarine;*/
}

.big {
    font-size: 5rem;
    color: whitesmoke;
    margin: 0 0 -28px;
}

.navbar-light .navbar-text {
    color: whitesmoke;
}

.navbar-collapse a,
.navbar-light .navbar-text a,
.navbar-collapse .span2 {
    font-weight: 400;
    font-size: 0.85rem;
}

/*.navbar-light .navbar-text a {*/
/*    color: gold !important;*/
/*}*/

/*!*.navbar-light .navbar-text i,*!*/
/*.navbar-light .navbar-text .extra,*/
/*    !*.navbar-collapse a i,*!*/
/*.navbar-collapse a .extra,*/
/*.navbar-collapse .span2 {*/
/*    display: none !important;*/
/*}*/

.container {
    margin-top: 78px;
}

@media (min-width: 801px) {
    .noMobile {
        display: inline !important;
    }

    .container,
    .container-lg,
    .container-md,
    .container-sm,
    .container-xl {
        max-width: 1200px !important;
    }
}

div.cardContainer {
    display: flex;
    justify-content: center;
}

.istok {
}

.white {
    color: white !important;
}

.porpora {
}

.porporino {
}

/*div.cardDiv {*/
/*    float: left;*/
/*    border: 1px solid #eeeeee;*/
/*    display: inline;*/
/*    padding: 19px;*/
/*    margin: 16px;*/
/*}*/

div.textBlock {
    /*background-color: rgba(0, 0, 0, 0.85);*/
    border-radius: 20px;
    /*border: 3px solid rgba(200, 230, 255, 0.3);*/
    padding: 36px;
    margin-bottom: 36px;
    background-color: rgba(0, 0, 0, 0.9);
}

div.textBlock p:last-child {
    margin-bottom: 0 !important;
}

.video-react .video-react-big-play-button {
    border: 0.06666em solid #326 !important;
    width: 2em !important;
}

.noTokens {
    font-size: 2rem;
    width: 50%;
    padding-top: 100px;
    text-align: center;
}

.container {
    padding-right: 12px;
    padding-left: 12px;
}

.smallvideo {
    width: 100%;
}

.noMobile {
    display: none !important;
}

.justify-content-end {
    display: none;
}

.splitter {
    display: block;
    height: 12px;
}

.splitter2 {
    display: block;
    height: 6px;
}

/*.navbar-collapse a, .navbar-light .navbar-text a, .navbar-collapse .span2 {*/
/*    border: 1px solid #226;*/
/*    border-radius: 6px;*/
/*    margin-right: 7px;*/
/*    background-color: #003;*/
/*}*/

/*.bg-dark {*/
/*    background-color: #002 !important;*/
/*    border-bottom: 1px dashed #309 !important;*/
/*}*/

@media (min-width: 990px) {
    .mr-auto a {
        font-size: 1.2rem !important;
    }
}

/*@media (min-width: 1400px) {*/
/*    .container {*/
/*        max-width: 1400px !important;*/
/*    }*/
/*}*/

a.yellowHover {
    color: whitesmoke !important;
}

a.yellowHover:hover {
    color: yellow !important;
}

a.menucmd {
    font-size: 0.8rem !important;
}

.tworem {
    font-size: 1.3rem;
}

small.error {
    color: #ffceec !important;
}

.m0Auto {
    margin: 0 auto;
}

.paglia {
    padding-left: 37px;
}

img.oil {
    width: 22%;
    margin: 4px;
}

.item {
    margin: 0 8px;
}

.credits {
    /*color: indigo;*/
}

.bio {
    /*color: indigo;*/
}

.roboto {
}

.largerp {
    font-size: 1.2rem;
}

.alice {
}

.webcam-capture video {
    width: 100%;
}

button {
}

.root {
    width: 100% !important;
}

div.subtitle {
    /*background: #000;*/
    width: 100%;
    text-align: center;
    padding-top: 42px;
    margin-bottom: 24px;
    /*border-bottom: 1px dashed #309;*/
    padding-bottom: 2px;
    /*color: white;*/
}

div.subtitle.transparent {
    background: transparent !important;
}

span.transparent {
    color: transparent !important;
}

div.subtitle div {
    font-size: 0.9rem;
    padding-bottom: 6px;
}

img.cover {
    border: 1px solid darkblue;
    border-radius: 8px;
    width: 100%;
}

.footer {
    width: 100%;
    /*background-color: white;*/
    padding: 8px 0;
}

a.cyan {
}

.spacer {
    display: block;
    height: 12px;
}
/* ... */

